# ClassesExtended

./: CMakeLists.txt  main.cpp
include/: Constants.h  Farmers.h  House.h  Loggers.h  Manager.h  Meals.h  Miners.h  People.h  PersonManager.h  Tools.h  Unemployed.h  UsefulObjects.h  Workers.h  resource.h
src/: CreateNewClass.sh  House.h  Manager.cpp  Manager.h  UsefulObjects.cpp  UsefulObjects.h  main.cpp  resource.cpp  resource.h
src/Classes/Managers/: Manager.cpp  PersonManager.cpp
src/Classes/Objects/: House.cpp  Meals.cpp  Tools.cpp  UsefulObjects.cpp
src/Classes/People/: Farmers.cpp  Loggers.cpp  Miners.cpp  People.cpp  Unemployed.cpp  Workers.cpp
src/Classes/Resources/: resource.cpp
